<resources>
    <string name="app_name">Party Kneads App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms"><u>Terms and Conditions</u></string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="readTerm">* I have read and agree with Party Kneads\' Terms and Conditions.</string>
    <string name="Description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="Succcess_add">You have successfully added the item to your cart—let’s get this party started!</string>
    <string name="Continue"><u>Continue Shopping \></u></string>
    <string name="backToHome"><u>Home</u></string>
    <string name="address">Blk 34 Lot 29 NHA Site 1 Brgy. Dayap, Calauan, Laguna</string>
    <string name="success">Your order has been placed successfully! Get ready for an amazing party!</string>
    <string name="forgotpass"><u>Forgot Password?</u></string>
    <string name="delete_account">We\'re truly sorry to see you go. Deleting your account will permanently remove all your data, including <b>orders, personal details, and any other information you\'ve provided.</b> Are you sure you want to proceed?</string>
    <string name="cancellation_reasons">Please select a cancellation reason. Please take note that this will cancel all items in the order and the action cannot be undone.</string>
    <string name="Terms_and_Conditions"><b>Party Kneads – Terms and Conditions</b></string>
    <string name="welcome">Welcome to the Party Kneads app! By downloading and using the Party Kneads application, you agree to the following Terms and Conditions. Please read them carefully.</string>
    <string name="terms1"><b>1. Personal Information Collection</b>
                            \nWhen using Party Kneads, users are required to provide personal information such as:

                            <b>\n\n• Email address
                            \n• First name and last name
                            \n• Phone number
                            \n• Address, State, Province, ZIP/Postal code, City</b>
                            <i>\n\nThis information is collected to ensure smooth processing of orders and accurate delivery.</i></string>
    <string name="terms2"><b>2. Use of Personal Data</b>
                            \nWe use your personal data solely for:

                            <b>\n\n• Processing orders (e.g., cakes, party supplies)
                            \n• Delivering products to your specified address
                            \n• Providing customer support when needed</b>
                            <i>\n\nWe do not share your personal information with third parties without your explicit consent unless required by law.</i></string>
    <string name="terms3"><b>3. Address Validation</b>
                            \nBy providing your delivery address, you agree that Party Kneads may verify the accuracy of the provided address to ensure timely and accurate delivery. This may include verifying postal codes and checking the location to ensure it is serviceable. </string>
    <string name="terms4"><b>4. Delivery Terms</b>

                           \n\n• Party Kneads will deliver products to the address you provide, as long as the location falls within our delivery zones.
                            \n• It is your responsibility to ensure the accuracy of the address.
                            <i>\n\nAny mistakes in the delivery address that lead to failed or delayed deliveries are the user\'s responsibility.</i></string>
    <string name="terms5"><b>5. Canceling Orders</b>

                           \n\n• Orders can only be canceled when the seller has not yet accepted the products for processing.  <b>Once the seller has accepted the order, cancellations are no longer possible.</b>
                            \n• To cancel an order, please contact us immediately at <a href="mailto:partykneads@gmail.com">partykneads@gmail.com</a>
                            \n• Custom or made-to-order items cannot be canceled once production has begun.
                            <i>\n\nRefunds for canceled orders (if applicable) will be processed within 7 business days.</i></string>
    <string name="terms6"><b>6. User Responsibilities</b>

                            \n\n• You agree to provide truthful and <b>up-to-date information</b> when registering and placing orders.
                            \n• Users are responsible for maintaining the <b>confidentiality</b> of their account details.</string>
    <string name="terms7"><b>7. Security of Personal Information</b>
                            \nWe take reasonable steps to ensure your personal information is <b>protected against unauthorized access.</b> However, we cannot guarantee absolute security due to the nature of online transactions. </string>
    <string name="terms8"><b>8. Data Retention</b>
                            \nYour personal information will be retained only for as long as necessary to fulfill the purposes mentioned above, such as delivering your orders or complying with legal obligations.</string>
    <string name="terms9"><b>9. Changes to Terms</b>
                            \nParty Kneads reserves the right to modify these terms at any time. Users will be notified of any significant changes through the app or via email.</string>
    <string name="terms10"><b>10. Contact Us</b>
                            \nIf you have any questions about these Terms and Conditions, please contact us at <a href="mailto:partykneads@gmail.com">\npartykneads@gmail.com</a>.
                            \n\n <b>Thank you for trusting Party Kneads!</b></string>
    <string name="aboutIntro">We are your one-stop shop for sweet treats and all the party essentials you need to make every occasion special. Whether you\'re celebrating a birthday, anniversary, or simply a joyful get-together, Party Kneads is here to help you create unforgettable moments. With a wide range of freshly baked goods and customizable party supplies, we’ve made it easy to celebrate with ease and joy. From delectable cakes and cupcakes to vibrant balloons and banners, we’ve got everything to help you party like never before.</string>
    <string name="ourServices"><b>Our Services:</b>

                           \n\n• <b>Freshly Baked Goods:</b> We offer an extensive selection of cakes, cupcakes, breads, and more, all made fresh and customized to your taste and event.
                            \n• <b>Party Essentials:</b> From balloons to banners, candles to confetti, we provide all the must-have supplies for your party to shine.
                            \n• <b>Customizable Orders:</b> Personalize your orders to suit your unique flavor preferences and party themes.
                            \n• <b>Convenient Delivery:</b> Enjoy reliable delivery right to your door, with safe and secure packaging to ensure your goodies arrive fresh and intact.
                            <i>\n\nAny mistakes in the delivery address that lead to failed or delayed deliveries are the user\'s responsibility.</i></string>
    <string name="ourMission"><b>Our Mission</b>
                            \n\nAt Party Kneads, we believe every celebration deserves to be memorable. Our mission is simple: <i> provide you with high-quality, delicious treats and party supplies to make your events stress-free and full of joy</i>. We are here to help you celebrate, one cake and one balloon at a time. </string>
    <string name="supportIntro">At Party Kneads, your satisfaction is our top priority. Whether you have questions about your order, payments, delivery, or product details, our support team is here to help you celebrate without worries.</string>
    <string name="contact"><b>Contact Information</b>

                            \n\n• <b>Email Support</b>: <a href="mailto:partykneads@gmail.com">partykneads@gmail.com</a> \nReach us anytime for assistance, and our team will respond within 24-48 hours.
                            \n• <b>Customer Service Hours:</b> Available from 9 AM - 6 PM, Monday to Saturday.
                            For urgent concerns during business hours, we’ll prioritize your inquiries to ensure quick resolution.</string>
    <string name="help"><b>Common Issues We Can Help With</b>

                          \n\n• <b>Order Issues:</b> Having trouble placing, modifying, or tracking your order? Let us guide you through the process or provide updates about your order status.
                            \n• <b>Payment Queries:</b> Facing issues with payments? We accept a variety of secure payment methods and are ready to assist with any transaction-related concerns.
                            \n• <b>Delivery Assistance:</b> Need help with your delivery? Whether it’s updating your address, checking your order’s progress, or resolving delivery issues, we’re here to make it right.
                            \n• <b>Product Information:</b> Curious about a cake flavor, balloon design, or party supply? Reach out for detailed information on all our products to help you choose the perfect fit for your celebration.</string>
    <string name="FAQS"><b>Frequently Asked Questions (FAQs)</b>

                            \n\n <b>1. What is the delivery time?</b> \nMost orders are delivered within 2-3 business days. For custom orders, delivery may take up to 7 business days, depending on the complexity of the customization. You will receive an email confirmation with tracking details once your order is shipped.
                            \n <b>2. Can I customize my order?</b> \nAbsolutely! We offer a range of customization options for cakes, balloons, and party supplies. Choose your preferred options when placing your order. If you need assistance or have a special request, feel free to contact our team for guidance.
                            \n <b>3. What payment methods do you accept?</b> \nCurrently, Party Kneads offers Cash on Delivery (COD) as our primary payment method. This ensures a hassle-free and secure transaction upon receiving your order. We are actively working to expand our payment options soon, including digital and online payment methods, to make your shopping experience even more convenient. Stay tuned for updates!
                            \n <b>4. What is your return policy?</b> \nIf there’s an issue with your order, please notify us within 24 hours of delivery.
                            \n• <b>Eligible Returns/Exchanges:</b>  Damaged or incorrect items will be replaced or refunded promptly.
                            \n• <b>Non-Refundable Items:</b> Custom-made products are non-refundable due to their personalized nature.</string>
    <string name="assistance"><b>Still Need Assistance?</b>

                          \n\n• If your concern isn’t listed here, please don’t hesitate to get in touch. We’re committed to resolving your issues as quickly and efficiently as possible.
                            \n <b>Tips for Faster Support:</b>
                            \n• Include your <b>Order ID</b> and any relevant details in your email to help us resolve your concern without delay.
                            \n• If you have a delivery-related issue, please mention your current address and any updates needed.</string>
    <string name="supp">
        \nWe’re always ready to assist you in creating the most memorable celebrations. Let us handle the details, so you can focus on enjoying your special moments.</string>
</resources>